2002-03-19  Havoc Pennington  <hp@redhat.com>

	* src/resizepopup.c (place_vertical_size_window) 
	(place_horizontal_size_window): disable the little shaped windows
	with the window size, they caused a crash anytime you tried to
	resize with Xft. And they were kind of on crack anyway.

2002-03-17  Havoc Pennington  <hp@pobox.com>

	* src/resizepopup.c (ensure_tick_windows): turn off the tick
	marks, that got annoying after about 5 minutes. One big shape 
	window instead of lots of little windows might fix it.

2002-03-17  Havoc Pennington  <hp@pobox.com>

	* src/resizepopup.c: Add some total crackrock resize-grid 
	indication for windows that have width_inc/height_inc
	so I can debug gnome-terminal sizing.

2002-03-17  Havoc Pennington  <hp@pobox.com>

	* src/session.c (set_clone_restart_commands): use proper property
	name for SmDiscardCommand (instead of setting the clone command to
	"rm"). Also fix typo that iterated over clonev not discardv to
	fill in prop list, and NULL-terminate discardv. #74584 from Kang
	Jeong-Hee.

2002-03-13  Havoc Pennington  <hp@pobox.com>

	* src/main.c (main): put back --sm-client-id argument, needed
	for including us in a default session

2002-03-13  Havoc Pennington  <hp@pobox.com>

	* src/session.c (meta_session_init): don't save a file here, only
	in response to SaveYourself. Change the code to properly use a
	unique state file for each SaveYourself. Totally, totally
	untested.

2002-03-12  Havoc Pennington  <hp@pobox.com>

	* src/theme-viewer.c: improve the theme viewer so people 
	can see the broken aspects of their themes.

2002-03-11  Havoc Pennington  <hp@pobox.com>

	* src/keybindings.c: use new functions

	* src/display.c (meta_display_get_tab_next): 
	(meta_display_get_tab_list): new tab order functions using 
	MRU list instead of map order

	* src/window.c (meta_window_notify_focus): maintain focus MRU list

	* src/display.h (struct _MetaDisplay): Keep an MRU list of 
	windows.
